build ajcorefassade with maven